# Veridicus

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
backend/: auth.py  celery_app.py  config.py  database.py  mail.py  worker.py
backend/agents/: code_verification_agent.py  dynamic_interrogator_agent.py  evaluation_agent.py  extraction_agent.py  llm_factory.py  pipeline.py  question_generator_agent.py  report_generator_agent.py  scraper_agent.py  session_init_agent.py  state.py
backend/api/: app.py
backend/api/routes/: admin.py  assessments.py  candidates.py  public.py
backend/models/: __init__.py  assessment.py  candidate.py  claim.py  github_verification.py  interrogation_session.py  skill_confidence.py  source_document.py  tenant.py
backend/schemas/: assessment.py  candidate.py  tenant.py
backend/services/: github_service.py  job_store.py  pdf_service.py  resume_parser.py
frontend/: .env.local.example  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: layout.tsx
frontend/src/app/admin/candidate-reports/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/knowledge-graph/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: GitHubVerificationBanner.tsx  GlassCard.tsx  PipelineStatus.tsx  QuestionWizard.tsx  ResumeUploader.tsx  ScoreDisplay.tsx
frontend/src/hooks/: useAntiCheat.ts
frontend/src/lib/: api.ts  auth.ts  types.ts
frontend/src/theme/: antdTheme.ts
(+9 files in other folders)
