[project]
name = "ai-polygraph"
version = "0.1.0"
description = "Multi-agent system that authenticates resume claims via LLM-powered technical assessment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "langchain>=1.2.12",
    "langchain-anthropic>=1.3.4",
    "langchain-core>=1.2.19",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.2",
    "pdfplumber>=0.11.9",
    "playwright>=1.58.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.37",
    "uvicorn[standard]>=0.41.0",
]

[tool.uv]
dev-dependencies = []
